feat: Use .toList() in lambdas [DHIS2-19835]