@@ -41,7 +41,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.hisp.dhis.common.OrderCriteria;
@@ -208,7 +207,7 @@ public class TrackerEventRequestParamsMapper {
                     qf ->
                         new QueryFilter(
                             qf.getOperator().mapToTrackerQueryOperator(), qf.getFilter()))
-                .collect(Collectors.toList()));
+                .toList());
 
     for (Entry<UID, List<QueryFilter>> entry : attributeFilters.entrySet()) {
       if (entry.getValue().isEmpty()) {
